# OpenCV_sGLOH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh
include/: gradient.h  kp.h  main.hpp  matcher.h  options.h  sGLOH_Options.h  sgloh.h
src/: gloh.cpp  gradient.cpp  kp.cpp  main.cpp  matcher.cpp  options.cpp  sGLOH_Options.cpp  sgloh.cpp
test/: test.cpp
